<resources>
    <string name="app_name">食時刻刻</string>
    <string name="welcome">歡迎使用TimeIceBox</string>
    <string name="_return">返回</string>
    <string name="food_name">食物</string>
    <string name="buy_day">購買日</string>
    <string name="expired_day">過期日</string>
    <string name="category">類別</string>
    <string name="remind">過期提醒天數</string>
    <string name="submit">送出</string>
    <string name="please_select">請選擇</string>
    <string name="input">輸入</string>
    <string name="icebox">冰箱</string>
    <string name="bad_icebox">腐壞冰箱</string>
    <string name="title_activity_maps">Map</string>
</resources>